# virtual-lab-experiment

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: experiment_spec.json  synthetic_experiment.csv
scripts/: check_secrets.py
skills/run-virtual-lab-experiment/: SKILL.md
skills/run-virtual-lab-experiment/agents/: openai.yaml
skills/run-virtual-lab-experiment/assets/: experiment_spec.template.json
skills/run-virtual-lab-experiment/references/: output-contract.md  spec-schema.md
skills/run-virtual-lab-experiment/scripts/: pipeline_core.py  run_virtual_lab.py
tests/: test_pipeline_safeguards.py  test_providers.py  test_smoke.py
